# anchor-todo

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Rocket.toml  config.toml.example
app/: Cargo.toml
app/src/: configuration.rs  main.rs
app/src/api/: auth.rs  health.rs  list.rs  mod.rs  mw.rs
app/src/domain/: entities.rs  mod.rs
app/src/repository/: in_memory.rs  list.rs  mod.rs  repository.rs  solana.rs  todo.rs
programs/todo/: Cargo.toml
programs/todo/src/: constants.rs  errors.rs  lib.rs
programs/todo/src/instructions/: create_list.rs  create_todo.rs  create_user.rs  initialize.rs  mod.rs  remove_list.rs  remove_todo.rs  update_list.rs  update_todo.rs
programs/todo/src/state/: list.rs  mod.rs  status.rs  todo.rs  user.rs
tests/: todo.ts
