[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anchor-client = { version = "0.27.0", features = ["debug"] }
anchor-lang = "0.27.0"
solana-sdk = "1.15.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
